# cgo-boilerplate

./: README.md  go.mod  local-build.cmd  main.go
pointcpp/: CMakeLists.txt
pointcpp/src/: point_c_impl.cpp
pointgo/: point.go
